--- a/gTarrGames/gTarrGames.Web/Web.config
+++ b/gTarrGames/gTarrGames.Web/Web.config
@@ -11,11 +11,14 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="GamesContext" connectionString="Server=tcp:greg-tarr.database.windows.net,1433;Initial Catalog=CIS174Spring2019;
-         Persist Security Info=False;User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;
-         Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    <add name="GamesContext" connectionString="Server=tcp:greg-tarr.database.windows.net,1433;Initial Catalog=gTarrGaming;Persist Security Info=False;
+         User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
          providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <!--<connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-gTarrGames.Web-20190222030217.mdf;Initial Catalog=aspnet-gTarrGames.Web-20190222030217;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>-->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
