--- a/gTarrGames/gTarrGames.Domain/gTarrGames.Domain.csproj
+++ b/gTarrGames/gTarrGames.Domain/gTarrGames.Domain.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Migrations\201902222131319_InitialDatabaseCreation.Designer.cs">
       <DependentUpon>201902222131319_InitialDatabaseCreation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201902252008243_UpdatedPersonEntity.cs" />
+    <Compile Include="Migrations\201902252008243_UpdatedPersonEntity.Designer.cs">
+      <DependentUpon>201902252008243_UpdatedPersonEntity.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,6 +69,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201902222131319_InitialDatabaseCreation.resx">
       <DependentUpon>201902222131319_InitialDatabaseCreation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201902252008243_UpdatedPersonEntity.resx">
+      <DependentUpon>201902252008243_UpdatedPersonEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
