--- a/gTarrGames/gTarrGames.Shared/gTarrGames.Shared.csproj
+++ b/gTarrGames/gTarrGames.Shared/gTarrGames.Shared.csproj
@@ -51,9 +51,12 @@
     <Compile Include="Enums\GenderEnum.cs" />
     <Compile Include="Orchestrators\HighScoreOrchestrator.cs" />
     <Compile Include="Orchestrators\Interfaces\IHighScoreOrchestrator.cs" />
+    <Compile Include="Orchestrators\Interfaces\IPersonOrchestrator.cs" />
+    <Compile Include="Orchestrators\PersonOrchestrator.cs" />
     <Compile Include="Orchestrators\ProjectMemberOrchestrator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\HighScoreViewModel.cs" />
+    <Compile Include="ViewModels\PersonViewModel.cs" />
     <Compile Include="ViewModels\ProjectMembersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
