--- a/gTarrGames/gTarrGames.Web/gTarrGames.Web.csproj
+++ b/gTarrGames/gTarrGames.Web/gTarrGames.Web.csproj
@@ -181,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Api\HighScoreApiController.cs" />
+    <Compile Include="Api\PersonApiController.cs" />
     <Compile Include="Api\ProjectMemberApiController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
