Uninstalled New versions that created errors
A new version of bootstrap would not process the navbar element.  Finally, I re-installed an earlier version to finish the project.

--- a/gTarrGames/gTarrGames.Web/Web.config
+++ b/gTarrGames/gTarrGames.Web/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="GamesContext" 
-         connectionString="Server=tcp:greg-tarr.database.windows.net,1433;Initial Catalog=gTarrGaming;Persist Security Info=False;&#xA;
-         User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+         connectionString="Server=tcp:greg-tarr.database.windows.net,1433;Initial Catalog=gTarrGaming;Persist Security Info=False;
+         User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
@@ -83,7 +83,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
