New Azure Account

--- a/gTarrGames/gTarrGames.Web/Web.config
+++ b/gTarrGames/gTarrGames.Web/Web.config
@@ -10,7 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="GamesContext" 
-         connectionString="Server=tcp:greg-tarr.database.windows.net,1433;Initial Catalog=gTarrGaming;Persist Security Info=False;
+         connectionString="Server=tcp:greg-tarr-cis174.database.windows.net,1433;Initial Catalog=Greg.Tarr.Games;Persist Security Info=False;
          User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
