--- a/gTarrGames/gTarrGames.Web/gTarrGames.Web.csproj
+++ b/gTarrGames/gTarrGames.Web/gTarrGames.Web.csproj
@@ -222,6 +222,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Properties\PublishProfiles\CIS174-gtarr-web - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\CIS175TARRGREG - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
