--- a/gTarrGames/gTarrGames.Web/Web.config
+++ b/gTarrGames/gTarrGames.Web/Web.config
@@ -9,10 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="GamesContext" 
-         connectionString="Server=tcp:greg-tarr-cis174.database.windows.net,1433;Initial Catalog=Greg.Tarr.Games;Persist Security Info=False;
-         User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" 
-         providerName="System.Data.SqlClient" />
+    <add name="GamesContext" connectionString="Server=tcp:greg-tarr-cis174.database.windows.net,1433;Initial Catalog=Greg.Tarr.Games;Persist Security Info=False;          User ID=gatarr;Password=dbDMACC#2;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-gTarrGames.Web-20190222030217.mdf;Initial Catalog=aspnet-gTarrGames.Web-20190222030217;Integrated Security=True"
@@ -95,7 +92,15 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.7.0" newVersion="5.2.7.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject.Web.Common" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.1.0" newVersion="3.3.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.4.0" newVersion="3.3.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
