--- a/gTarrGames/gTarrGames.Domain/gTarrGames.Domain.csproj
+++ b/gTarrGames/gTarrGames.Domain/gTarrGames.Domain.csproj
@@ -37,6 +37,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Moq, Version=4.2.1510.2205, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <HintPath>..\packages\Moq.4.2.1510.2205\lib\net40\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject, Version=3.3.4.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.3.3.4\lib\net45\Ninject.dll</HintPath>
     </Reference>
@@ -62,6 +65,10 @@
     <Compile Include="Migrations\201902252008243_UpdatedPersonEntity.Designer.cs">
       <DependentUpon>201902252008243_UpdatedPersonEntity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201904032142192_AddHighScoreColumnToPerson.cs" />
+    <Compile Include="Migrations\201904032142192_AddHighScoreColumnToPerson.Designer.cs">
+      <DependentUpon>201904032142192_AddHighScoreColumnToPerson.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -75,6 +82,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201902252008243_UpdatedPersonEntity.resx">
       <DependentUpon>201902252008243_UpdatedPersonEntity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904032142192_AddHighScoreColumnToPerson.resx">
+      <DependentUpon>201904032142192_AddHighScoreColumnToPerson.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
