--- a/gTarrGames/gTarrGames.Web/Web.config
+++ b/gTarrGames/gTarrGames.Web/Web.config
@@ -102,6 +102,10 @@
         <assemblyIdentity name="Ninject" publicKeyToken="c7192dc5380945e7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.3.4.0" newVersion="3.3.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Moq" publicKeyToken="69f491c39445e920" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.1510.2205" newVersion="4.2.1510.2205" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
