--- a/gTarrGames/gTarrGames.Test/gTarrGames.Test.csproj
+++ b/gTarrGames/gTarrGames.Test/gTarrGames.Test.csproj
@@ -85,6 +85,7 @@
     <Compile Include="GetHighScoresTest.cs" />
     <Compile Include="HighScoreServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SetNewHighScoreAPITest.cs" />
     <Compile Include="SetNewHighScorePersonOrchestratorTest.cs" />
     <Compile Include="YourHighScoreServiceTests.cs" />
   </ItemGroup>
