Assignment 7.2 Add an Error Page
-Implemented error handling via error page.
-Created generate error page to throw System.OutOfMemoryException
-For some reason, now profile page is broken only when deployed, still works locally

--- a/gTarrGames/gTarrGames.Domain/gTarrGames.Domain.csproj
+++ b/gTarrGames/gTarrGames.Domain/gTarrGames.Domain.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\ErrorLog.cs" />
     <Compile Include="Entities\HighScore.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="GamesContext.cs" />
@@ -68,6 +69,10 @@
     <Compile Include="Migrations\201904032142192_AddHighScoreColumnToPerson.cs" />
     <Compile Include="Migrations\201904032142192_AddHighScoreColumnToPerson.Designer.cs">
       <DependentUpon>201904032142192_AddHighScoreColumnToPerson.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201904241718279_AddErrorLogEntity.cs" />
+    <Compile Include="Migrations\201904241718279_AddErrorLogEntity.Designer.cs">
+      <DependentUpon>201904241718279_AddErrorLogEntity.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -85,6 +90,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201904032142192_AddHighScoreColumnToPerson.resx">
       <DependentUpon>201904032142192_AddHighScoreColumnToPerson.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201904241718279_AddErrorLogEntity.resx">
+      <DependentUpon>201904241718279_AddErrorLogEntity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
