--- a/gTarrGames/gTarrGames.Web/Web.config
+++ b/gTarrGames/gTarrGames.Web/Web.config
@@ -22,6 +22,23 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error redirect="~/Error/Ok" statusCode="200"/>
+      <error redirect="~/Error/Created" statusCode="201"/>
+      <error redirect="~/Error/Accepted" statusCode="202"/>
+      <error redirect="~/Error/NoContent" statusCode="204"/>
+      <error redirect="~/Error/BadRequest" statusCode="400"/>
+      <error redirect="~/Error/Unauthorized" statusCode="401"/>
+      <error redirect="~/Error/Forbidden" statusCode="403"/>
+      <error redirect="~/Error/NotFound" statusCode="404"/>
+      <error redirect="~/Error/MethodNotAllowed" statusCode="405"/>
+      <error redirect="~/Error/RequestTimeout" statusCode="408"/>
+      <error redirect="~/Error/LengthRequired" statusCode="411"/>
+      <error redirect="~/Error/InternalServerError" statusCode="500"/>
+      <error redirect="~/Error/NotImplemented" statusCode="501"/>
+      <error redirect="~/Error/BadGateway" statusCode="502"/>
+      <error redirect="~/Error/ServiceUnavailable" statusCode="503"/>
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
